--- a/landing page/index.html
+++ b/landing page/index.html
@@ -1,8 +1,13 @@
 <html><head>
     <script type = "Module" defer src="app.js"></script>
     <head>
+        <link rel="stylesheet" href="css/style.css">
         <body>
-
+            <p1>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Vero possimus maxime illum odit officia, 
+                 provident non laudantium beatae nostrum distinctio, 
+                 labore iste doloremque repellat ut rem tempora, 
+                 ratione fuga dicta?</p1>
         </body>
     </head>
 </head>
