fixed the article

--- a/website/html/index.html
+++ b/website/html/index.html
@@ -13,14 +13,20 @@
     </header>
     <article>
 
-    </article>
+    
 
         <h1>bo museum online </h1>
-        <p>
-            op de foto hieronder kunt u 1 van de vele spellen zien
-            die er tespelen vallen in het game museum 
-            de museum staat op oudste spellen naar de aller nieuwste
+        <p id="tekst">
+            "Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident,
+            sunt in culpa qui officia deserunt mollit anim id est laborum."
         </p>
+
         <figure>
             <img id="myImage" src="img/foto3.jpg" alt="">
             <figcaption>
