added, nav,language,tekst spaces,fixed footer

--- a/website/html/engels.html
+++ b/website/html/engels.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li class="active"><a href="index.html"> home</a></li>
-                <li><a href="">contactgegevens</a></li>
+                <li><a href="">contact details</a></li>
                 <li><a href="">highlights</a></li>
 
             </ul>
@@ -36,7 +36,7 @@
             </div>
             <article class="watIsErTeDoen">
 
-                <h2>wat is er tedoen?</h2>
+                <h2>what can you do?</h2>
 
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam culpa,
@@ -49,7 +49,7 @@
         <!-- hier moet de img slider komen-->
         <div class="box2">
             <article class="geschiedenis">
-                <h2>geschiedenis</h2>
+                <h2>History</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Hic et ducimus voluptate ipsam quae explicabo temporibus reiciendis,
                     commodi libero dolores nihil in.
@@ -68,22 +68,22 @@
     </main>
     <footer class="footer">
         <article class="footerOpeningTijden">
-            <H2 class="tijden">openingstijden</H2>
+            <H2 class="tijden">opening times</H2>
             <p class="ma-vr">
-                maandag/dinsdag gesloten
+                monday/Tuesday closed
                 <br>
-                woensdag/donderdag 10:00/18:00
+                wednesday/thursday 10:00/18:00
                 <br>
-                vrijdag:10:00-21:00
+                friday:10:00-21:00
             </p>
             <p class="za-zo">
-                zaterdag:10:00-18:00
+                saturday:10:00-18:00
                 <br>
-                zondag:12:00-18:00
+                sunday:12:00-18:00
             </p>
         </article>
         <section class="footerLocatie">
-            <h2 class="tijden">locatie</h2>
+            <h2 class="tijden">location</h2>
             <p>
                 Theaterplein 11, 2711 EK Zoetermeer</p>
         </section>
