image slider html

--- a/website/html/index.html
+++ b/website/html/index.html
@@ -22,7 +22,8 @@
             </ul>
         </nav>
         <a href="engels.html" class="engels"><img src="img/engelsvlagtaal.png" alt="engels taal veranderen"></a>
-        <a href="index.html" class="nederlands"><img src="img/nederlandsvlagtaal.webp" alt="nederlands taal veranderen"></a>
+        <a href="index.html" class="nederlands"><img src="img/nederlandsvlagtaal.webp"
+                alt="nederlands taal veranderen"></a>
 
 
     </header>
@@ -47,6 +48,24 @@
             </article>
         </div>
         <!-- hier moet de img slider komen-->
+
+        <div class="slider-container">
+            <div class="slider-image-container">
+                <img src="img/1.jpg" class="slider-image" id="image1">
+                <img src="img/2.jpg" class="slider-image" id="image2">
+                <img src="img/3.jpg" class="slider-image" id="image3">
+                <img src="img/4.jpg" class="slider-image" id="image3">
+                <img src="img/5.jpg" class="slider-image" id="image3">
+                <img src="img/6.jpg" class="slider-image" id="image3">
+                <img src="img/7.jpg" class="slider-image" id="image3">
+                <img src="img/8.jpg" class="slider-image" id="image3">
+            </div>
+            <div class="slider-nav">
+                <button class="slider-nav-button" id="prev">prev</button>
+                <button class="slider-nav-button" id="next">next</button>
+            </div>
+        </div>
+
         <div class="box2">
             <article class="geschiedenis">
                 <h2>geschiedenis</h2>
