image slider javascript

--- a/website/html/index.html
+++ b/website/html/index.html
@@ -47,7 +47,8 @@
                 </p>
             </article>
         </div>
-        <!-- hier moet de img slider komen-->
+
+        <!-- image slider -->
 
         <div class="slider-container">
             <div class="slider-image-container">
@@ -65,6 +66,8 @@
                 <button class="slider-nav-button" id="next">next</button>
             </div>
         </div>
+
+        <!--            -->
 
         <div class="box2">
             <article class="geschiedenis">
