made the reviews

--- a/website/html/engels.html
+++ b/website/html/engels.html
@@ -15,9 +15,9 @@
 
         <nav>
             <ul>
-                <li class="active"><a href="index.html"> home</a></li>
+                <li class="active"><a href="engels.html"> home</a></li>
                 <li><a href="">contact details</a></li>
-                <li><a href="">highlights</a></li>
+                
 
             </ul>
         </nav>
@@ -39,10 +39,10 @@
                 <h2>what can you do?</h2>
 
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam culpa,
-                    delectus quas rem corporis saepe nulla vitae voluptatibus laborum.
-                    Alias minus reprehenderit culpa,
-                    aperiam ipsam ea id quis sunt molestiae.
+                    in the national video game museum you can experience the timeline of games.
+                    as you go through the museum you will slowly move from the oldest games to the newer games. this is a wonderful experience.
+                    in this game musuem you will not only play games but also learn the history of how games we know today came about.
+                    our musuem is for young and old so everyone is welcome.
                 </p>
             </article>
         </div>
@@ -50,10 +50,17 @@
         <div class="box2">
             <article class="geschiedenis">
                 <h2>History</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Hic et ducimus voluptate ipsam quae explicabo temporibus reiciendis,
-                    commodi libero dolores nihil in.
-                    Recusandae suscipit eveniet impedit inventore autem, sunt omnis.</p>
+                <p>the story begins in 2008 in a garage box in the city of the hague.
+                    through 2 friends hansan tsdemr and pascal rappailes.
+                    the garage box was soon too small, so they looked for a new place and ended up in a shed.
+                    the shed had no heating and everything had to be transferred in the winter.
+                    when this location also had to be cleared out. became the collection of 10 arcade cabinets at that time
+                    transferred to an old showroom of classic cars. there they could not work on the cabinets due to lack of space.
+                    so the search continued for a suitable space. in 2011 they had found a good place.
+                    only due to the growth, the hobby approach was no longer appropriate and.
+                    they decided to take a professional approach. in 2015 she switched to a company called playworks BV.
+                    in 2016 they had the idea to turn it into a museum. At the beginning of 2017, a location was found in collaboration with the municipality.
+                    the formal v&d building in the city center of Zoetermeer. on December 1, 2017, the museum was ready for visitors.</p>
             </article>
             <article class="reviews">
                 <h2>reviews</h2>
