--- a/website/html/index.html
+++ b/website/html/index.html
@@ -16,8 +16,8 @@
         <nav>
             <ul>
                 <li class="active"><a href="index.html"> home</a></li>
-                <li><a href="">contactgegevens</a></li>
-                <li><a href="">highlights</a></li>
+                <li><a href="contact.html">contactgegevens</a></li>
+                
 
             </ul>
         </nav>
@@ -39,29 +39,43 @@
                 <h2>wat is er tedoen?</h2>
 
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam culpa,
-                    delectus quas rem corporis saepe nulla vitae voluptatibus laborum.
-                    Alias minus reprehenderit culpa,
-                    aperiam ipsam ea id quis sunt molestiae.
+                    in het nationaal video game museum kan je de tijdbalk van games beleven.
+                    je zult door de museum gaan waar je van oudste games langzaam bij de nieuwere games komt. dit is een wonderbaarlijke ervaring.
+                    in dit game musuem speel je niet alleen games maar leer je ook de geschiedenis van hoe games die we nu kennen in stand zijn gekomen.
+                    ons musuem is voor jong en oud dus iedereen is welkom.
                 </p>
             </article>
         </div>
-        <!-- hier moet de img slider komen-->
+        <!-- hier moet de img slider komen (slider and highligts zijn het zelfde)-->
         <div class="box2">
             <article class="geschiedenis">
                 <h2>geschiedenis</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Hic et ducimus voluptate ipsam quae explicabo temporibus reiciendis,
-                    commodi libero dolores nihil in.
-                    Recusandae suscipit eveniet impedit inventore autem, sunt omnis.</p>
+                <p>het verhaal begint in 2008 in een garage box in de plaats den haag.
+                    door middel van 2 vrienden hansan tsdemr en Pascal rappailes.
+                    de garage box was al snel teklein waardoor ze zochten naar een nieuwe plek en kwamen uit op een loods.
+                    de loods had alleen geen verwarming en moest in de winter alles worden overgebracht.
+                    toen de deze locatie ook leeggeruimed moest worden. werd de collectie van op dat moment 10 arcade kasten worde
+                    overgebracht naar een oude show room van klassieke auto`s. daar konden ze niet werken aan de kasten door ruimte tekort.
+                    dus ging de zoekt toch verder naar een passende ruimte.in 2011 hadden ze een goede plek te pakken.
+                    alleen door de groei was de hobbymatig aanpak niet meer passend en.
+                    besloten ze het profasioneel aan te pakken.in 2015 stapte ze over naar een befrijf met de naam playworks BV.
+                    in 2016 hadden ze het idee om er een museum van temaken.begin 2017 in samenwerking met de gemeente werd een locatie gevonden.
+                    het vormalige v&d pand in stadshart zoetermeer. op 1 december 2017 was de museum klaar voor bezoekers.</p>
             </article>
             <article class="reviews">
                 <h2>reviews</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nemo autem recusandae,
-                    aliquam repellendus quas eum. At,
-                    veritatis quia excepturi labore molestiae accusamus repellat facere rerum odio sint consequuntur
-                    voluptates saepe.</p>
+                <h5 class="username">Romy T</h5>
+                <p>
+                    Ontzettend leuk voor jong en oud. Super vriendelijk personeel!
+                </p>
+                <br>
+                <h5 class="username">Christiaan Meijer</h5>
+                <p>Fantastische plek voor jong en oud! Het staat te boek als een museum maar dan is het werk het coolste museum wat ik ooit ben geweest! Het is gewoon een mega grote arcade hal met elke denkbare video game console een arcade kast baan de '70 tot nu!
+                    Prima toegangsprijs voor een paar uur onbeperkt spelen op alles wat er staat. Ze hebben voor sommige oudere consoles ook een huiskamer uit die periode! Talking about a flashback!
+                    Zeker een aanrader voor jong en oud als je van gamen houdt!</p>
+                    <br>
+                    <h5>Leoni Notenboom</h5>
+                    <p>Wat een leuk museum. Niet alleen voor de jeugd! Paperback, wolfenstein 3d, Prince of persia en photo play ook aanwezig net als vele andere oude games. Wij hebben ons vermaakt van 7 jaar tot 72 jaar oud</p>
             </article>
         </div>
 
@@ -86,6 +100,7 @@
             <h2 class="tijden">locatie</h2>
             <p>
                 Theaterplein 11, 2711 EK Zoetermeer</p>
+            <p>Algemeen TelefoonNummer: 079 – 360 27 18</p>
         </section>
     </footer>
     <script src="script.js"></script>
