added socialmedia imgs

--- a/website/html/contact.html
+++ b/website/html/contact.html
@@ -59,6 +59,9 @@
                     zakelijk@nationaalvideogamemuseum.nl
                     
                 </p>
+                <img class="socialLogoFB" src="img/facebook logo.webp" alt="facebook shortcut">
+                <img class="socialLogoIS" src="img/instagram logo.webp" alt="">
+                <img class="socialLogoYT" src="img/youtubelogo.webp" alt="shortcut voor youtube">
             </article>
         </div>
     </main>
