fixed the contact pages

--- a/website/html/engels.html
+++ b/website/html/engels.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li class="active"><a href="engels.html"> home</a></li>
-                <li><a href="">contact details</a></li>
+                <li><a href="engelscontact.html">contact details</a></li>
                 
 
             </ul>
@@ -101,16 +101,16 @@
                 <h2>reviews</h2>
                 <h5 class="username">Romy T</h5>
                 <p>
-                    Ontzettend leuk voor jong en oud. Super vriendelijk personeel!
+                    Very nice for young and old. Super friendly staff!
                 </p>
                 <br>
                 <h5 class="username">Christiaan Meijer</h5>
-                <p>Fantastische plek voor jong en oud! Het staat te boek als een museum maar dan is het werk het coolste museum wat ik ooit ben geweest! Het is gewoon een mega grote arcade hal met elke denkbare video game console een arcade kast baan de '70 tot nu!
-                    Prima toegangsprijs voor een paar uur onbeperkt spelen op alles wat er staat. Ze hebben voor sommige oudere consoles ook een huiskamer uit die periode! Talking about a flashback!
-                    Zeker een aanrader voor jong en oud als je van gamen houdt!</p>
+                <p>Fantastic place for young and old! It is listed as a museum but then the work is the coolest museum I've ever been to! It's just a huge arcade hall with every conceivable video game console an arcade cabinet from the 70's to now!
+                    Great admission price for a few hours of unlimited play on everything it says. They also have a living room from that period for some older consoles! Talking about a flashback!
+                    Definitely recommended for young and old if you like gaming!</p>
                     <br>
                     <h5>Leoni Notenboom</h5>
-                    <p>Wat een leuk museum. Niet alleen voor de jeugd! Paperback, wolfenstein 3d, Prince of persia en photo play ook aanwezig net als vele andere oude games. Wij hebben ons vermaakt van 7 jaar tot 72 jaar oud</p>
+                    <p>What a nice museum. Not just for the youth! Paperback, wolfenstein 3d, prince of persia and photo play also present as many other old games. We have been entertained from 7 years to 72 years old</p>
             </article>
         </div>
 
@@ -135,6 +135,7 @@
             <h2 class="tijden">location</h2>
             <p>
                 Theaterplein 11, 2711 EK Zoetermeer</p>
+            <p>general PhoneNumber: 079 – 360 27 18</p>
         </section>
     </footer>
     <script src="script.js"></script>
