fixed de error in w3 validator on contact page

--- a/website/html/contact.html
+++ b/website/html/contact.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact pagina</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -61,8 +61,8 @@
                     Algemeen TelefoonNummer: 079 – 360 27 18
                     
                 </p>
-                <img class="socialLogoFB" src="img/facebook logo.webp" alt="facebook shortcut">
-                <img class="socialLogoIS" src="img/instagram logo.webp" alt="">
+                <img class="socialLogoFB" src="img/facebooklogo.webp" alt="facebook shortcut">
+                <img class="socialLogoIS" src="img/instagramlogo.webp" alt="">
                 <img class="socialLogoYT" src="img/youtubelogo.webp" alt="shortcut voor youtube">
             </article>
         </div>
