--- a/website/html/engelscontact.html
+++ b/website/html/engelscontact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -61,8 +61,8 @@
                     general PhoneNumber: 079 – 360 27 18
                     
                 </p>
-                <img class="socialLogoFB" src="img/facebook logo.webp" alt="facebook shortcut">
-                <img class="socialLogoIS" src="img/instagram logo.webp" alt="">
+                <img class="socialLogoFB" src="img/facebooklogo.webp" alt="facebook shortcut">
+                <img class="socialLogoIS" src="img/instagramlogo.webp" alt="">
                 <img class="socialLogoYT" src="img/youtubelogo.webp" alt="shortcut voor youtube">
             </article>
         </div>
