highlight text toegevoegd

--- a/website/html/index.html
+++ b/website/html/index.html
@@ -109,8 +109,7 @@
                 <h2 class="highlightsTitle">highlights</h2>
 
                 <p class="highlights">
-                    
-                    
+                hier zijn een paar foto's van  ons museum en blije bezoekers
                 </p>
             </article>
         </div>
