--- a/website/html/index.html
+++ b/website/html/index.html
@@ -109,7 +109,25 @@
                 <h2 class="highlightsTitle">highlights</h2>
 
                 <p class="highlights">
+
+
+
                     
+
+                    <h4>foto 1</h4>
+                    <br>
+                    <p>je ziet hier een jonge man de game f355 challenger saga spelen
+                        F355 Challenge is a racing simulation arcade video game based on the actual race car and Ferrari event.
+                    </p>
+                    <br>
+                    <h4>foto 2</h4>
+                    <p></p>
+                    <br>
+                    <h4>foto 3</h4>'
+                    <p></p>
+                    <br>
+                    <h4>foto 5</h4>
+                    <p></p>
                     
                 </p>
             </article>
