--- a/website/html/index.html
+++ b/website/html/index.html
@@ -119,13 +119,20 @@
                     </p>
                     <br>
                     <h4>foto 2</h4>
-                    <p></p>
+                    <p>een foto van een jonge die ace driver speelt.
+                        Ace Driver is a 1994 racing arcade game developed and published by Namco.
+                        The player controls a Formula One racer,
+                        with the objective being to complete three laps of
+                        a race course and to avoid a collision with opponents and other obstacles.
+                    </p>
                     <br>
                     <h4>foto 3</h4>'
-                    <p></p>
+                    <p>replica van een ouderwetse kamer waar een retro game word gespeelt met een spookje als main player</p>
                     <br>
                     <h4>foto 5</h4>
-                    <p></p>
+                    <p>je gallerij van game kasten en de japanse game Hatsune Miku: Project DIVA Arcade
+                        Hatsune Miku: Project DIVA Arcade (初音ミク Project DIVA Arcade) is a 2010 arcade rhythm game created by Sega and Crypton Future Media for arcade machines.
+                    </p>
                     
                 
 
