--- a/website/html/index.html
+++ b/website/html/index.html
@@ -119,14 +119,22 @@
                     </p>
                     <br>
                     <h4>foto 2</h4>
-                    <p></p>
+                    <p>hier zie je een groep vrienden samen een race game spelen</p>
                     <br>
                     <h4>foto 3</h4>'
-                    <p></p>
+                    <p>dit is een ouderweds hoekje in ons mueseum waar je kan zien hoe een tv er vroeger uit zag</p>
                     <br>
                     <h4>foto 5</h4>
-                    <p></p>
-                    
+                    <p>dit is dezelfde vrienden groep die nu een ander race spel spelen dankzij onze wijde keuze aan games</p>
+                    <br>
+                    <h4>foto 6</h4>
+                    <p>hier ziet u een foto van de race toestellen wanneer ze niet gebruikt worden</p>
+                    <br>
+                    <h4>foto 7</h4>
+                    <p>hier ziet u een van onze vechtgames</p>
+                    <br>
+                    <h4>foto 8</h4>
+                    <p>hier is een </p>
                 
 
                 </p>
