added the engels highlights

--- a/website/html/index.html
+++ b/website/html/index.html
@@ -115,15 +115,12 @@
                     <h4>foto 1</h4>
                     <br>
                     <p>je ziet hier een jonge man de game f355 challenger saga spelen
-                        F355 Challenge is a racing simulation arcade video game based on the actual race car and Ferrari event.
+                        F355 Challenge is een arcade-videogame voor racesimulatie, gebaseerd op de daadwerkelijke raceauto en het Ferrari-evenement.
                     </p>
                     <br>
                     <h4>foto 2</h4>
                     <p>een foto van een jonge die ace driver speelt.
-                        Ace Driver is a 1994 racing arcade game developed and published by Namco.
-                        The player controls a Formula One racer,
-                        with the objective being to complete three laps of
-                        a race course and to avoid a collision with opponents and other obstacles.
+                        Ace Driver is een race-arcadespel uit 1994, ontwikkeld en uitgegeven door Namco. De speler bestuurt een Formule 1-racer, met als doel drie ronden van een racebaan af te leggen en een botsing met tegenstanders en andere obstakels te voorkomen.
                     </p>
                     <br>
                     <h4>foto 3</h4>'
@@ -131,7 +128,7 @@
                     <br>
                     <h4>foto 5</h4>
                     <p>je gallerij van game kasten en de japanse game Hatsune Miku: Project DIVA Arcade
-                        Hatsune Miku: Project DIVA Arcade (初音ミク Project DIVA Arcade) is a 2010 arcade rhythm game created by Sega and Crypton Future Media for arcade machines.
+                        Hatsune Miku: Project DIVA Arcade (初音ミク Project DIVA Arcade)is een arcade-ritmegame uit 2010 gemaakt door Sega en Crypton Future Media voor arcade-machines.
                     </p>
                     
                 
