--- a/website/html/engels.html
+++ b/website/html/engels.html
@@ -52,11 +52,8 @@
                 <img src="img/1.jpg" class="slider-image" id="image1" alt="photo of f35 challenger saga">
                 <img src="img/2.jpg" class="slider-image" id="image2" alt="2 player racing game's photo">
                 <img src="img/3.jpg" class="slider-image" id="image3" alt="a picture of an old fashioned decorated corner with an old game computer">
-                <img src="img/4.jpg" class="slider-image" id="image3" alt="out run 2SP's photo">
-                <img src="img/5.jpg" class="slider-image" id="image3" alt="photo of different types of boxes that can be seen">
-                <img src="img/6.jpg" class="slider-image" id="image3" alt="photo of the game soul calibur 7">
-                <img src="img/7.jpg" class="slider-image" id="image3" alt="photo of the racing boxes that are playing">
-                <img src="img/8.jpg" class="slider-image" id="image3" alt="jr pacman arcade">
+                <img src="img/4.jpg" class="slider-image" id="image4" alt="out run 2SP's photo">
+                <img src="img/5.jpg" class="slider-image" id="image5" alt="jr pacman arcade">
             </div>
             <div class="slider-nav">
                 <button class="slider-nav-button" id="prev">prev</button>
@@ -87,6 +84,8 @@
                     <h4>foto 3</h4>
                     <p>replica of an old-fashioned room where a retro game is played with a ghost as the main player</p>
                     <br>
+                    <h4>foto 4</h4>
+                    <p>here you can see a group of friends playing a racing game</p>
                     <h4>foto 5</h4>
                     <p>your gallery of game cabinets and the japanese game Hatsune Miku: Project DIVA Arcade Hatsune Miku: Project DIVA Arcade (初音ミク Project DIVA Arcade) is a 2010 arcade rhythm game created by Sega and Crypton Future Media for arcade machines.
                     </p>
