--- a/website/html/index.html
+++ b/website/html/index.html
@@ -90,10 +90,7 @@
                 <img src="img/2.jpg" class="slider-image" id="image2" alt="foto van 2 player race game ">
                 <img src="img/3.jpg" class="slider-image" id="image3" alt="een foto van een ouderwetse ingerichte hoek met een oude spel computer">
                 <img src="img/4.jpg" class="slider-image" id="image4" alt="foto van out run 2SP ">
-                <img src="img/5.jpg" class="slider-image" id="image5" alt="foto van verschillende soorten kasten die er tezien zijn">
-                <img src="img/6.jpg" class="slider-image" id="image6" alt="foto van de game soulcalibur 7">
-                <img src="img/7.jpg" class="slider-image" id="image7" alt="foto van de race kasten die er tespelen zijn">
-                <img src="img/8.jpg" class="slider-image" id="image8" alt="jr pacman arcade kast">
+                <img src="img/5.jpg" class="slider-image" id="image5" alt="jr pacman arcade kast">
             </div>
             <div class="slider-nav">
                 <button class="slider-nav-button" id="prev">prev</button>
@@ -125,6 +122,9 @@
                     <br>
                     <h4>foto 3</h4>'
                     <p>replica van een ouderwetse kamer waar een retro game word gespeelt met een spookje als main player</p>
+                    <br>
+                    <h4>foto 4</h4>
+                    <p>hier zie je een groep vrienden die samen een race spel spelen</p>
                     <br>
                     <h4>foto 5</h4>
                     <p>je gallerij van game kasten en de japanse game Hatsune Miku: Project DIVA Arcade
